2017-07-12  Karl Kuhrman  <kkuhrman@barzensuit.org>
	* inc/bzenyaml.h: declare bzen_yaml_event create, destroy, restore
	* src/bzenyaml.c: define bzen_yaml_parser_event create, destroy, restore
	* tests/bzentest_yaml.c: unit tests bzen_yaml_event create, destro, restore
	
2017-07-12  Karl Kuhrman  <kkuhrman@barzensuit.org>
	* inc/bzenyaml.h: declare bzen_yaml_parser_set_input_file()
	* src/bzenyaml.c: define bzen_yaml_parser_set_input_file()
	* tests/bzentest_yaml.c: unit tests bzen_yaml_parser_set_input_file()
	
2017-07-11  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* inc/bzensbuf.h: declare bzen_sbuf_create_file()
	* src/bzensbuf.c: define bzen_sbuf_create_file()
	* tests/bzentest_sbuf.c: unit tests bzen_sbuf_create_file()
	
2017-07-11  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* inc/bzenyaml.h: add bzen_yaml_error_code_t to bzen_yaml_parser_t
	* src/bzenyaml.c: initial define bzen_yaml_parser_restore()
	
2017-07-07  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* inc/bzenetc.h: declare log configuration file type
	* inc/bzenyaml.h: declare bzen_yaml_parser_create(), bzen_yaml_parser_destroy()
	* src/bzenyaml.c: define bzen_yaml_parser_create(), bzen_yaml_parser_destroy()
	* src/Makefile.ac: add bzenyaml.c & bzenyaml.h
	* tests/bzentest_yaml.c: unit tests bzen_yaml_parser_create(), bzen_yaml_parser_destroy()
	* tests/Makefile.ac: add bzentest_yaml
	
2017-07-06  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version to 0.2.0
	* inc/bzenipc.h: declare bzen_ipc_fork()
	* src/bzenipc.c: define bzen_ipc_fork()
	* src/Makefile.ac: add bzenipc.c & bzenipc.h
	
2017-06-28  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version to 0.1.8
	* src/bzendbug.c: added bzen_dbug_log_buffer_dump()
	* tests/bzentest_dbug.c: Full unit test of bzen_dbug_log_buffer_dump()
	
2017-03-02  Karl Kuhrman  <kkuhrman@barzensuit.org>

	* configure.ac: advanced version to 0.1.7
	* src/bzenlog.c: Full implementation of open, close, write for multiple logs