@@ -1,0 +1,24 @@
+/**
+ * @file:	bzenstrm.c
+ * @BRIEF:      STREAM MANIPULATION.
+ * 
+ * @COPYRIGHT:	COPYRIGHT (C) 2017 KUHRMAN TECHNOLOGY SOLUTIONS LLC
+ * @LICENSE:	GPLV3+: GNU GPL VERSION 3
+ *
+ * THIS PROGRAM IS FREE SOFTWARE: YOU CAN REDISTRIBUTE IT AND/OR MODIFY
+ * IT UNDER THE TERMS OF THE GNU GENERAL PUBLIC LICENSE AS PUBLISHED BY
+ * THE FREE SOFTWARE FOUNDATION, EITHER VERSION 3 OF THE LICENSE, OR
+ * (AT YOUR OPTION) ANY LATER VERSION.
+ *
+ * THIS PROGRAM IS DISTRIBUTED IN THE HOPE THAT IT WILL BE USEFUL,
+ * BUT WITHOUT ANY WARRANTY; WITHOUT EVEN THE IMPLIED WARRANTY OF
+ * MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.  SEE THE
+ * GNU GENERAL PUBLIC LICENSE FOR MORE DETAILS.
+ * 
+ * YOU SHOULD HAVE RECEIVED A COPY OF THE GNU GENERAL PUBLIC LICENSE
+ * ALONG WITH THIS PROGRAM.  IF NOT, SEE <HTTP://WWW.GNU.ORG/LICENSES/>.
+ */
+
+#include <config.h>
+#include "bzendbug.h"
+#include "bzenstrm.h"
