@@ -1,0 +1,33 @@
+/**
+ * @file:	bzentest_nfl.c
+ * @brief:	Unit test Barzensuit Neutral Form Language (BNFL) code.
+ *
+ * @copyright:	Copyright (C) 2017 Kuhrman Technology Solutions LLC
+ * @license:	GPLv3+: GNU GPL version 3
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#include <config.h>
+
+/* libzenc includes */
+#include "bzentest.h"
+#include "bzennfl.h"
+
+int main (int argc, char *argv[])
+{
+  int result = BZEN_TEST_EVAL_PASS;
+
+  return result;
+}
